--- a/Project.toml
+++ b/Project.toml
@@ -13,3 +13,4 @@ PolyChaos = "8d666b04-775d-5f6e-b778-5ac7c70f65a3"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
